# Karabo-slsDetectors

./: .cpp-ci.yml  .gitignore  .gitlab-ci.yml  .install.sh  CMakeLists.txt  DEPENDS  Makefile  README.md  README.rst  pyproject.toml
ci/: lint-cppcheck
cmake/: import_karabo_lib_legacy.cmake
doc/: Makefile  requirements.txt
doc/source/: conf.py  deployment.rst  index.rst  installation.rst  intro.rst  setup.rst  slsControl.rst  slsDetector.rst  slsDetectorSimulation.rst  slsReceiver.rst  troubleshooting.rst
nbproject/: Karabo-Debug-Linux.mk  Karabo-Release-Linux.mk  Karabo-impl-Linux.mk  Karabo-variables-Linux.mk  configurations.xml  project.xml
slsControl/: .install.sh  CMakeLists.txt  Makefile  README.rst
slsControl/nbproject/: Karabo-Debug-Linux.mk  Karabo-Release-Linux.mk  Karabo-Simulation-Linux.mk  Karabo-impl-Linux.mk  Karabo-variables-Linux.mk  configurations.xml  project.xml
slsControl/src/: CMakeLists.txt  Gotthard2Control.cc  Gotthard2Control.hh  GotthardControl.cc  GotthardControl.hh  JungfrauControl.cc  JungfrauControl.hh  SlsControl.cc  SlsControl.hh
slsControl/src/test/: testSlsControl.cc
slsControl/src/tests/: SlsControlTest.cc  SlsControlTest.hh  test_runner.cc
slsDetectorsSimulation/: Makefile
slsDetectorsSimulation/nbproject/: Karabo-Debug-Linux.mk  Karabo-Release-Linux.mk  Karabo-impl-Linux.mk  Karabo-variables-Linux.mk  configurations.xml  project.xml
slsDetectorsSimulation/src/: Detector.cc  Detector.h  Receiver.cc  Receiver.h  slsDetectorUsers.cc  slsDetectorUsers.h  slsReceiverUsers.cc  slsReceiverUsers.h  sls_simulation_defs.h
slsReceiver/: .install.sh  CMakeLists.txt  Makefile
slsReceiver/nbproject/: Karabo-Debug-Linux.mk  Karabo-Release-Linux.mk  Karabo-Simulation-Linux.mk  Karabo-impl-Linux.mk  Karabo-variables-Linux.mk  configurations.xml  project.xml
slsReceiver/src/: CMakeLists.txt  Gotthard2Receiver.cc  Gotthard2Receiver.hh  GotthardReceiver.cc  GotthardReceiver.hh  JungfrauReceiver.cc  JungfrauReceiver.hh  SlsReceiver.cc  SlsReceiver.hh
slsReceiver/src/test/: testSlsReceiver.cc
slsReceiver/src/tests/: SlsReceiverTest.cc  SlsReceiverTest.hh  SlsReceiver_App.cc  test_runner.cc
src/: CMakeLists.txt  SlsDetectors.cc  SlsDetectors.hh
src/slsControl/: Gotthard2Control.cc  Gotthard2Control.hh  GotthardControl.cc  GotthardControl.hh  JungfrauControl.cc  JungfrauControl.hh  SlsControl.cc  SlsControl.hh
src/slsDetectorsSimulation/: Detector.cc  Detector.h  Receiver.cc  Receiver.h  sls_simulation_defs.h
src/slsReceiver/: Gotthard2Receiver.cc  Gotthard2Receiver.hh  GotthardReceiver.cc  GotthardReceiver.hh  JungfrauReceiver.cc  JungfrauReceiver.hh  SlsReceiver.cc  SlsReceiver.hh
src/test/: testSlsControl.cc  testSlsReceiver.cc  testrunner.cc
wheel_tests/: test_console.py
